--- a/src/pages/1024.md
+++ b/src/pages/1024.md
@@ -5,3 +5,5 @@ title: "Happy 1024"
 <h1 style="text-align:center;">{2025-1024: Intelligent Collaboration.}</h1>
 Code. Create. Inspire.
 Shaping Tomorrow, Line by line.
+代码，创想，启发。
+一行一行，塑造未来。
