--- a/src/data/blog/2025.md
+++ b/src/data/blog/2025.md
@@ -1,5 +1,5 @@
 ---
-title: "我的 2025"
+title: "我的 2025 年度总结"
 date: "2025-12-16"
 pubDatetime: 2025-12-16
 description: "本文讨论了作者对 2025 年的年度总结以及 2026 年的规划，涵盖了参加活动、个人生活、健康、风格、对云服务的看法等方面。"
